--- a/.docker/config.json
+++ b/.docker/config.json
@@ -1,3 +1,3 @@
 {
-  "psFormat": "table {{.ID}}\t{{.Image}}\t{{.RunningFor}}\t{{.Status}}"
+  "psFormat": "table {{.ID}}\t{{.Image}}\t{{.Status}}"
 }
